// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Builtin resources, STDIO should read meta resources, patternfly-components-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Components Index Metadata
Use these parameters to filter the list of PatternFly components.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`react\` | Filter by category |
| \`version\` | \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://components/index\`
- **Filtered View (version=...)**: \`patternfly://components/index?version=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://components/index?version=...&category=...\`",
  "uri": "patternfly://components/meta",
}
`;

exports[`Builtin resources, STDIO should read meta resources, patternfly-docs-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Documentation Index Metadata
Use these parameters to filter the PatternFly documentation index.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`design-tokens\`, \`development-guidelines\`, \`grammar\`, \`react\`, \`writing-guides\` | Filter by category |
| \`section\` | \`ai\`, \`charts\`, \`components\`, \`content-design\`, \`extensions\`, \`foundations-and-styles\`, \`get-started\`, \`guidelines\`, \`layouts\`, \`patterns\`, \`resources\`, \`upgrade\` | Filter by section |
| \`version\` | \`v4\`, \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://docs/index\`
- **Filtered View (version=...)**: \`patternfly://docs/index?version=...\`
- **Filtered View (category=...)**: \`patternfly://docs/index?category=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://docs/index?version=...&category=...\`
- **Filtered View (section=...)**: \`patternfly://docs/index?section=...\`
- **Filtered View (version=...&section=...)**: \`patternfly://docs/index?version=...&section=...\`
- **Filtered View (category=...&section=...)**: \`patternfly://docs/index?category=...&section=...\`
- **Filtered View (version=...&category=...&section=...)**: \`patternfly://docs/index?version=...&category=...&section=...\`",
  "uri": "patternfly://docs/meta",
}
`;

exports[`Builtin resources, STDIO should read meta resources, patternfly-schemas-meta 1`] = `
{
  "mimeType": "text/markdown",
  "text": "# PatternFly Component Schemas Index Metadata
Use these parameters to filter the list of PatternFly component schemas.

## Available Parameters

| Parameter | Valid Values | Description |
| :--- | :--- | :--- |
| \`category\` | \`accessibility\`, \`design-guidelines\`, \`react\` | Filter by category |
| \`version\` | \`v5\`, \`v6\` | Filter by version |

## Available Patterns
- **Base View**: \`patternfly://schemas/index\`
- **Filtered View (version=...)**: \`patternfly://schemas/index?version=...\`
- **Filtered View (version=...&category=...)**: \`patternfly://schemas/index?version=...&category=...\`",
  "uri": "patternfly://schemas/meta",
}
`;

exports[`Builtin tools, STDIO should concatenate headers and separator with two remote files 1`] = `
"# Content for http://127.0.0.1:5010/notARealPath/AboutModal.md
Source: http://127.0.0.1:5010/notARealPath/AboutModal.md

# Test Document

This is a test document for mocking remote HTTP requests.

---

# Content for http://127.0.0.1:5010/notARealPath/README.md
Source: http://127.0.0.1:5010/notARealPath/README.md

# PatternFly Development Rules
            This is a generated offline fixture used by the MCP external URLs test.

            Essential rules and guidelines working with PatternFly applications.

            ## Quick Navigation

            ### 🚀 Setup & Environment
            - **Setup Rules** - Project initialization requirements
            - **Quick Start** - Essential setup steps
            - **Environment Rules** - Development configuration"
`;

exports[`Builtin tools, STDIO should expose expected tools and stable shape 1`] = `
{
  "toolNames": [
    "searchPatternFlyDocs",
    "usePatternFlyDocs",
  ],
}
`;

exports[`Builtin tools, STDIO should return expected markdown structure for search results: markdown 1`] = `
"# Search results for PatternFly version "v6" and "button". Showing 2 exact matches.
1. **button**:
  "usePatternFlyDocs" resource parameter "name" and "URLs"
    - **Name**: button
    - **URLs**:
      - [Button - (v6) - Design Guidelines for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/components/button/button.md)
      - [Button - (v6) - Accessibility for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/components/accessibility/button/button.md)
      - [Button - (v6) - Examples for the button component.](https://raw.githubusercontent.com/patternfly/patternfly-react/476782a298df81cb78de7f3cd804f3ff8f33993c/packages/react-core/src/components/Button/examples/Button.md)
    - **Resources**:
      - **URI**: patternfly://docs/button?version=v6
      - **JSON Schemas**: patternfly://schemas/button?version=v6

2. **patterns**:
  "usePatternFlyDocs" resource parameter "name" and "URLs"
    - **Name**: patterns
    - **URLs**:
      - [Actions - (v6) - The best practices for designing processes that a user can trigger by clicking or selecting a UI element, such as a button or link.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/actions/actions.md)
      - [Bulk selection - (v6) - A defined method for users to select or deselect multiple items within complex content views or data tables.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/bulk-selection/bulk-selection.md)
      - [Card view - (v6) - A structured layout designed to display a grid of cards in a gallery, optimizing for browsing and interaction.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/card-view/card-view.md)
      - [Component usage and behavior - (v6) - Guidance on how to choose between similar components and use them appropriately based on specific user contexts and use cases.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/usage-and-behavior.md)
      - [Dashboard - (v6) - A highly customizable layout that serves as a high-level overview of key metrics or performance indicators.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/dashboard/dashboard.md)
      - [Filters - (v6) - The design rules for implementing filtering mechanisms that allow users to narrow down content from large datasets or complex views.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/filters/filters.md)
      - [Primary-detail - (v6) - A two-pane layout that shows a list of items and corresponding details for the currently selected item.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/primary-detail/primary-detail.md)
      - [Status and severity - (v6) - Guidance on the consistent and accessible use of color and iconography to communicate status and severity across the UI.](https://raw.githubusercontent.com/patternfly/patternfly-org/2d5fec39ddb8aa32ce78c9a63cdfc1653692b193/packages/documentation-site/patternfly-docs/content/patterns/status-and-severity/status-and-severity.md)
    - **Resources**:
      - **URI**: patternfly://docs/patterns?version=v6



---


**Important**:
  - Use the "usePatternFlyDocs" tool with the above names and URLs to fetch resource content.
  - Use a search all ("*") to find all available resources."
`;

exports[`Logging should allow setting logging options, default 1`] = `[]`;

exports[`Logging should allow setting logging options, stderr 1`] = `
[
  "[INFO]: Server logging enabled.
",
  "[INFO]: Server stats enabled.
",
  "[INFO]: No external resources loaded.
",
  "[INFO]: No external tools loaded.
",
  "[INFO]: Registered resource: patternfly-context
",
  "[INFO]: Registered resource: patternfly-components-index-meta
",
  "[INFO]: Registered resource: patternfly-components-index
",
  "[INFO]: Registered resource: patternfly-docs-index-meta
",
  "[INFO]: Registered resource: patternfly-docs-index
",
  "[INFO]: Registered resource: patternfly-docs-template
",
  "[INFO]: Registered resource: patternfly-schemas-index-meta
",
  "[INFO]: Registered resource: patternfly-schemas-index
",
  "[INFO]: Registered resource: patternfly-schemas-template
",
  "[INFO]: Registered tool: usePatternFlyDocs
",
  "[INFO]: Registered tool: searchPatternFlyDocs
",
  "[INFO]: @patternfly/patternfly-mcp server running on stdio transport
",
]
`;

exports[`Logging should allow setting logging options, with log level filtering 1`] = `[]`;

exports[`Logging should allow setting logging options, with mcp protocol 1`] = `
[
  {
    "method": "notifications/message",
    "params": {
      "data": "@patternfly/patternfly-mcp server running on stdio transport",
      "level": "info",
      "logger": "@patternfly/patternfly-mcp",
    },
  },
]
`;

exports[`Tools should interact with a tool, echo basic tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
  "options": [
    "serverName",
    "serverVersion",
    "nodeMajor",
    "repoName",
  ],
}
`;

exports[`Tools should interact with a tool, echo create MCP tool 1`] = `
{
  "args": {
    "dolor": "sit amet",
    "lorem": "ipsum",
    "type": "echo",
  },
  "content": [
    {
      "text": "{"type":"echo","lorem":"ipsum","dolor":"sit amet"}",
      "type": "text",
    },
  ],
}
`;
